<resources>
    <string name="app_name">MUSAPP</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="email">EMAIL</string>
    <string name="validate_password">VALIDATE PASSWORD</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="travelcoin">TRAVELCOIN</string>
    <string name="name_cannot_be_empty">Name Cannot Be Empty</string>
    <string name="invalid_email_adress">Invalid Email Adress</string>
    <string name="invalid_password">Invalid Password</string>

</resources>