<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/uibackground">


    <TextView
        android:layout_width="wrap_content"
        android:textSize="75dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:fontFamily="casual"
        android:text="@string/app_name"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        android:text="@string/log_in"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:text="@string/sign_up"/>



</LinearLayout>